Styles profile navbar, adds profile dropdown button

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Aside
+@import 'partials/aside';
+
+// Dashboard
+@import 'partials/dashboard';
