--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10962,3 +10962,45 @@ a.text-dark:focus {
   }
 }
 
+aside {
+  height: calc(100vh - 55px);
+  width: 300px;
+  background: #837cf6;
+  background: linear-gradient(180deg, #837cf6 0%, #5c54f1 100%);
+  padding: 20px 0;
+}
+
+aside ul .list-group-item {
+  background: transparent;
+  text-align: center;
+  padding: 0;
+  border: 0;
+}
+
+aside ul .list-group-item a {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  padding: 10px;
+  font-size: 20px;
+  color: white;
+  border-bottom: 2px solid transparent;
+  transition: border 0.3s;
+}
+
+aside ul .list-group-item a:hover {
+  border-bottom: 2px solid #c550f2;
+  text-decoration: none;
+}
+
+.dashboard-content {
+  width: 50%;
+  height: 300px;
+  border: 1px solid lightgray;
+  background-color: white;
+  box-shadow: 1px 1px 10px lightgray;
+  border-radius: 20px;
+  margin-left: 200px;
+  margin-top: 50px;
+}
+
