--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10995,12 +10995,17 @@ aside ul .list-group-item a:hover {
 
 .dashboard-content {
   width: 50%;
-  height: 300px;
+  height: 500px;
   border: 1px solid lightgray;
   background-color: white;
   box-shadow: 1px 1px 10px lightgray;
   border-radius: 20px;
   margin-left: 200px;
   margin-top: 50px;
+}
+
+.dashboard-content form .form-group textarea {
+  height: 200px;
+  resize: none;
 }
 
