--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -1,10 +1,19 @@
 .dashboard-content{
   width:50%;
-  height: 300px;
+  height: 500px;
   border:1px solid lightgray;
   background-color:white;
   box-shadow:1px 1px 10px lightgray;
   border-radius: 20px;
   margin-left:200px;
   margin-top:50px;
+
+  form{
+    .form-group{
+      textarea{
+        height: 200px;
+        resize: none;
+      }
+    }
+  }
 }
