--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -2,7 +2,7 @@
   width:50%;
   height: 500px;
   border:1px solid lightgray;
-  background-color:white;
+  background-color:lightgray;
   box-shadow:1px 1px 10px lightgray;
   border-radius: 20px;
   margin-left:200px;
@@ -29,5 +29,28 @@
       color:white;
       }
     }
+  }
+
+  .post-viewer{
+    .post-title{
+      background-color: $indigo;
+      border-radius: 10px;
+      padding:10px;
+      box-shadow: 1px 1px 10px gray;
+      color:white;
+      text-align: center;
+    }
+
+    .post-description{
+      height: 300px;
+      box-shadow: 1px 1px 10px gray;
+      border-radius: 10px;
+      overflow: auto;
+      margin-top: 30px;
+      padding:10px;
+      font-size: 23px;
+      background-color: white;
+    }
+
   }
 }
