--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,10 @@
 
 // Dashboard
 @import 'partials/dashboard';
+
+
+main{
+  background-image: url("../../public/img/34714751.jpg");
+  background-size: cover;
+  background-position: 0 -200px;
+}
