--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,7 +14,7 @@
 @import 'partials/dashboard';
 
 
-main{
+.admin-main{
   background-image: url("../../public/img/34714751.jpg");
   background-size: cover;
   background-position: 0 -200px;
