--- a/resources/sass/partials/_post.scss
+++ b/resources/sass/partials/_post.scss
@@ -9,6 +9,16 @@
     max-width: 300px;
   }
 
+  .card-body{
+    .category-label{
+      display: inline-block;
+      padding:7px 10px;
+      font-weight: bold;
+      color:white;
+      border-radius: 20px;
+    }
+  }
+
   .card-text{
     font-size:25px;
     margin-bottom: 30px;
