--- a/resources/sass/partials/_aside.scss
+++ b/resources/sass/partials/_aside.scss
@@ -1,5 +1,5 @@
 aside{
-  height: calc(100vh - 55px);
+  height: 100%;
   width: 300px;
   background: linear-gradient(0deg, rgba(198,208,238,1) 0%, rgba(26,65,110,1) 100%);
   padding: 20px 0;
