--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -1,56 +1,67 @@
 .dashboard-content{
-  width:1200px;
-  height: min-content;
-  background: linear-gradient(0deg, rgba(104,143,182,1) 0%, rgba(8,29,50,1) 100%);
-  border-radius: 20px;
-  margin-left:200px;
-  margin-top:50px;
+  width:1100px;
+  height: 100%;
+  background: white;
+  border:1px solid lightgray;
+  border-radius:20px;
 
-  h2{
-    margin-bottom: 35px;
-    text-align: center;
-  }
-
-  h2,label{
-    color:white;
-  }
-
-  form{
-    .form-group{
-      textarea{
-        height: 200px;
-        resize: none;
-      }
+  .inner-box{
+    width:100%;
+    height: 100%;
+    border-radius:10px;
+    box-shadow: 1px 1px 20px gray;
+    padding:10px;
+    h2{
+      margin-bottom: 35px;
+      text-align: center;
     }
-  }
 
-  .user-posts{
-    height:400px;
-    overflow: auto;
-    a{
-      color:unset;
-      transition: all 0.2s;
-
-      &:hover{
-      text-decoration: none;
-      background-color: royalblue;
-      color:white;
-      }
+    h2{
+      color:royalblue;
     }
-  }
 
-  .comments-section{
-    .comments-container{
-      max-height: 200px;
-      overflow: auto;
-      
-      .card{
-        background-color: rgb(228, 227, 236);
-      }
+    label{
+      color:rgb(36, 57, 119);
+      font-size:20px;
     }
+
     form{
-      textarea{
-        resize: none;
+      .form-group{
+        textarea{
+          height: 200px;
+          resize: none;
+        }
+      }
+    }
+
+    .user-posts{
+      height:400px;
+      overflow: auto;
+      a{
+        color:unset;
+        transition: all 0.2s;
+
+        &:hover{
+        text-decoration: none;
+        background-color: royalblue;
+        color:white;
+        }
+      }
+    }
+
+    .comments-section{
+      .comments-container{
+        max-height: 200px;
+        overflow: auto;
+        
+        .card{
+          background-color: rgb(228, 227, 236);
+        }
+      }
+      form{
+        textarea{
+          resize: none;
+        }
       }
     }
   }
