--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -15,7 +15,8 @@ footer{
       .icon{
         background-color: rgb(78, 78, 78);
         border-radius: 50%;
-        padding: 12px 15px;
+        padding:15px;
+        line-height: 15px;
 
         i{
           font-size: 20px;
