--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,5 +1,21 @@
 
 header{
+
+  .navbar{
+    .router-link-exact-active{
+      position: relative;
+      &:after{
+        content: "";
+        position: absolute;
+        bottom:0;
+        left:50%;
+        transform: translateX(-50%);
+        width: 80%;
+        height: 2px;
+        background-color: blue;
+      }
+    }
+  }
 .jumbotron-container{
   width:100%;
   height: 700px;
