--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -15,6 +15,12 @@ header{
         background-color: blue;
       }
     }
+
+    .navbar-brand.router-link-exact-active{
+      &:after{
+        display: none;
+      }
+    }
   }
 .jumbotron-container{
   width:100%;
